@@ -1,0 +1,17 @@
+<script>
+var translationcheckBrowser = "{$smarty.const._CHECKBROWSER}";
+var translationcheckResolution = "{$smarty.const._CHECKRESOLUTION}";
+var translationcheckPopupBlocker = "{$smarty.const._CHECKPOPUPBLOCKER}";
+var translationcheckCookies = "{$smarty.const._CHECKCOOKIES}";
+var translationcheckFlash = "{$smarty.const._CHECKFLASH}";
+var translationcheckAcrobat = "{$smarty.const._CHECKACROBAT}";
+var translationcheckBrowserIE = "{$smarty.const._CHECKBROWSERIE6}";
+var translationcheckBrowserFailed = "{$smarty.const._CHECKBROWSERFAILED}";
+var translationcheckResolutionFailed = "{$smarty.const._CHECKRESOLUTIONFAILED}";
+var translationcheckPopupBlockerFailed = "{$smarty.const._CHECKPOPUPBLOCKERFAILED}";
+var translationcheckCookiesFailed = "{$smarty.const._CHECKCOOKIESFAILED}";
+var translationcheckFlashFailed = "{$smarty.const._CHECKFLASHFAILED}";
+var translationcheckAcrobatFailed = "{$smarty.const._CHECKACROBATFAILED}";
+</script>
+<script type="text/javascript" src="js/optionsChecker.js"></script>
+<noscript><table width="100%"><tr><td>{$smarty.const._CHECKJAVASCRIPT}</td><td><img src='images/16x16/error_delete.png' title='{$smarty.const._CHECKJAVASCRIPTFAILED}' /></td></tr></table></noscript>
